# HistogramEqalizer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  histogram_equalizer.cpp  histogram_equalizer.h  main.cpp
unit-test/: CMakeLists.txt  unit-test.cpp
